--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,7 +32,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  staging:
-    +materialized: view
-  marts:
-    +materialized: table
+  jaffle_shop:
+    staging:
+      +materialized: view
+    marts:
+      +materialized: table
