updates test, docs and sources

--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,18 +2,23 @@ version: 2
 
 models:
   - name: stg_customers
+    description: Staged customers data for jaffle shop app
     columns:
       - name: customer_id
+        description: Primary Key for customer data
         tests:
           - unique
           - not_null
   - name: stg_orders
+    description: Staged orders data 
     columns:
-      - name: orders_id
+      - name: order_id
+        description: Primary key for orders
         tests:
           - unique
           - not_null
       - name: status
+        description: "{{ doc('order_status')}}"
         tests:
           - accepted_values:
               values:
@@ -23,6 +28,7 @@ models:
                 - placed
                 - return_pending
       - name: customer_id
+        description: Foreign key to stg_customers.customer_id.
         tests:
           - relationships:
               to: ref('stg_customers')
